bug 87047. Handle keep-alives from http/1.1 servers properly. Patch by me and darin, r=gagan, sr=dougt